# IIS

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: project_dev.yml
data/processed/: obdelani_podatki.csv
data/processed/air/: obdelani_podatki_air.csv
data/processed/weather/: obdelani_podatki_weather.csv
data/raw/weather/: neobdelani_podatki.json
models/: model.pkl
notebooks/: Untitled.ipynb
reports/: train_metrics.txt
src/data/: fetch_data.py  fetch_data_air.py  fetch_data_weather.py  process_data.py  process_data_air.py  process_data_weather.py
src/models/: train_model.py
src/serve/: api.py
src/tests/: test_api.py
