[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["zavratnikj <jure.zavratnik@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
flask = "^2.2.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
